# arknights_scheduel_generator

./: .gitattributes  .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml  start_ui.bat  stop_ui.bat
arknights_schedule_generator/: __init__.py  calibration.py  cli.py  data.py  dependency_parser.py  desktop_launcher.py  diagnostics.py  exporter.py  full_roster.py  models.py  morale.py  optimizer.py  power.py  presets.py  production.py  recommender.py  room_limits.py  roster.py  schedule_html.py  schedule_import.py  skill_rules.py  web_app.py
docs/: ui_launcher.md
docs/memory/: next_steps.md
examples/: README.md
examples/fixtures/: yituliu_full_roster_maxed.xlsx
examples/outputs/: schedule_243_balanced_orundum.json  score_243_balanced_orundum.json
outputs/: schedule_243_balanced_orundum.json
tests/: test_data.py  test_optimizer.py  test_production.py  test_roster.py  test_ui_launcher.py
tools/: ArknightsScheduleUI.spec  build_windows_app.ps1  pyinstaller_entry.py  start_ui.ps1  stop_ui.ps1
